# HS2-ADCS_Sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: params.hpp  satellite.hpp
include/imumaths/: imumaths.hpp  matrix.hpp  quaternion.hpp  vector.hpp
scripts/: plot_B.py  plotter.py  poltter.py
src/: main.cpp  satellite.cpp
